frame/support/test/tests/derive_no_bound_ui/clone.stderr
error[E0277]: the trait bound `<T as Config>::C: Clone` is not satisfied
 --> tests/derive_no_bound_ui/clone.rs:7:2
  |
7 |     c: T::C,
  |     ^ the trait `Clone` is not implemented for `<T as Config>::C`
